[Swagger] Update document for swagger.
